--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    git 
-    nueva linea 
+    <h1>prueba de funcionamiento git</h1>
+    <h2>correcion de titulo</h2>
 </body>
 </html>
